Drop support for copy as link

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -46,7 +46,7 @@ body, html {
   overflow: scroll;
   overflow-y: auto;
   overflow-x: auto;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: Lato, Helvetica, Arial, sans-serif;
   padding: 10px;
 }
 
