Loading namespace feedback

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -146,3 +146,13 @@ body, html {
   display: flex;
   align-items: center;
 }
+
+.kbd {
+  background-color: #ccc;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.cljspad-keybindings > table {
+  text-align: left;
+}
